--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 password_dictionaries/rockyou.txt filter=lfs diff=lfs merge=lfs -text
+wpa_tests/rockyou_crafted.txt filter=lfs diff=lfs merge=lfs -text
