making tests work again

--- a/RogueAccessPointDetector/Pipfile
+++ b/RogueAccessPointDetector/Pipfile
@@ -8,6 +8,10 @@ pyshark = "*"
 scapy = "*"
 netifaces = "*"
 nmcli = "*"
+kamene = "*"
+pandas = "*"
+matplotlib = "*"
+scipy = "*"
 
 [dev-packages]
 pandas = "*"
